--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
     font-size: 50px;
-    color: brown;
+    color: rgb(165, 163, 42);
     font-family: cursive;
-    background-color: yellow;
+    background-color: rgb(56, 30, 202);
 }
