--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,6 @@ body {
     text-align: center;
     font-size: 50px;
     color: rgb(255, 251, 3);
-    font-family: cursive;
+    font-family: sans-serif;
     background-color: rgb(56, 30, 202);
 }
